--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title data-en="Co-op Training Quiz" data-jp="協同組合のトレーニングクイズ">Co-op Training Quiz</title>
+    <title data-en="Worker Coop Training Quiz" data-jp="協同組合のトレーニングクイズ">worker coop Training Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -18,13 +18,13 @@
         <button onclick="switchLanguage('jp')">JP</button>
     </div>
 
-    <h1 data-en="Co-op Training Quiz" data-jp="協同組合のトレーニングクイズ">Co-op Training Quiz</h1>
+    <h1 data-en="Worker Coop Training Quiz" data-jp="協同組合のトレーニングクイズ">Worker Coop Training Quiz</h1>
     <button id="startButton" data-en="Start Quiz" data-jp="クイズを始める" onclick="startQuiz()">Start Quiz</button>
 
     <div id="section1" class="quiz-section">
-        <h2 data-en="What Makes a Co-op Training Program Successful?" 
+        <h2 data-en="What Makes a Worker Coop Training Program Successful?" 
             data-jp="協同組合のトレーニングプログラムを成功させる要因は何ですか？">
-            What Makes a Co-op Training Program Successful?
+            What Makes a worker coop Training Program Successful?
         </h2>
         <form>
             <label>
@@ -37,7 +37,7 @@
             </label>
             <label>
                 <input type="radio" name="answer1" value="Service">
-                <span data-en="Service to the community and co-op members" data-jp="地域社会と協同組合員への奉仕">Service to the community and co-op members</span>
+                <span data-en="Service to the community and worker coop members" data-jp="地域社会と協同組合員への奉仕">Service to the community and worker coop members</span>
             </label>
             <label>
                 <input type="radio" name="answer1" value="All">
@@ -51,9 +51,9 @@
     </div>
 
     <div id="section2" class="quiz-section">
-        <h2 data-en="Which of the following actions is appropriate when handling sensitive co-op information?" 
+        <h2 data-en="Which of the following actions is appropriate when handling sensitive worker coop information?" 
             data-jp="機密性の高い協同組合の情報を取り扱う際に適切な行動はどれですか？">
-            Which of the following actions is appropriate when handling sensitive co-op information?
+            Which of the following actions is appropriate when handling sensitive worker coop information?
         </h2>
         <form>
             <label>
@@ -83,9 +83,9 @@
     </div>
 
     <div id="section3" class="quiz-section">
-        <h2 data-en="What should a member do if they notice a potential safety hazard in the co-op workplace?" 
-            data-jp="協同組合の職場で安全上の問題に気づいた場合、メンバーはどうすべきですか？">
-            What should a member do if they notice a potential safety hazard in the co-op workplace?
+        <h2 data-en="What should a member do if they notice a potential safety hazard in the worker coop workplace?" 
+            data-jp="労協の職場で安全上の問題に気づいた場合、メンバーはどうすべきですか？">
+            What should a member do if they notice a potential safety hazard in the worker coop workplace?
         </h2>
         <form>
             <label>
