--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </label><br><br>
             <button type="button" data-en="Submit Answer" data-jp="回答を送信" 
                     onclick="checkAnswer(3, 'Report')">Submit Answer</button>
-        <button id="restartButton" data-en="Start Again" data-jp="再度開始" onclick="restartQuiz()"> 
+        <button id="restartButton" data-en="Start Again" data-jp="再度開始" > 
             <span>Start Again</span>
         </button>
         </form>
