--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <button onclick="switchLanguage('jp')">JP</button>
     </div>
 
-    <h1 data-en="Worker Coop Training Quiz" data-jp="協同組合のトレーニングクイズ">Worker Coop Training Quiz</h1>
+    <h1 
+    style="margin-top: 70px;"
+    data-en="Worker Coop Training Quiz" data-jp="協同組合のトレーニングクイズ">Worker Coop Training Quiz</h1>
     <button id="startButton" data-en="Start Quiz" data-jp="クイズを始める" onclick="startQuiz()">Start Quiz</button>
 
     <div id="section1" class="quiz-section">
