--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
             </label>
             <label>
                 <input type="radio" name="answer3" value="Report">
-                <span data-en="Report it immediately to a supervisor or designated safety officer" 
-                      data-jp="上司または指定の安全担当者に直ちに報告する">
-                      Report it immediately to a supervisor or designated safety officer</span>
+                <span data-en="Report it immediately to a coordinator or designated safety team member" 
+                      data-jp="コーディネーターまたは指定された安全チームのメンバーに直ちに報告する">
+                    Report it immediately to a coordinator or designated safety team member
+                </span>
             </label>
             <label>
                 <input type="radio" name="answer3" value="FixAlone">
