--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
             </label><br><br>
             <button type="button" data-en="Submit Answer" data-jp="回答を送信" 
                     onclick="checkAnswer(3, 'Report')">Submit Answer</button>
-        <button id="restartButton" data-en="Start Again" data-jp="再度開始" > 
-            <span>Start Again</span>
-        </button>
         </form>
         <p id="result3"></p>
         <button id="next3" data-en="Finish" data-jp="終了" style="display:none;" onclick="showFinalResult()">Finish</button>
+        <button id="restartButton" data-en="Start Again" data-jp="再度開始"  onclick="location.reload()"> 
+            <span>Start Again</span>
+        </button>
     </div>
 
     <div id="chartContainer">
