--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </form>
         <p id="result3"></p>
         <button id="next3" data-en="Finish" data-jp="終了" style="display:none;" onclick="showFinalResult()">Finish</button>
-        <button id="restartButton" data-en="Start Again" data-jp="再度開始"  onclick="location.reload()"> 
+        <button id="restartButton" data-en="Start Again" data-jp="再度開始"  style="display:none;" onclick="location.reload()"> 
             <span>Start Again</span>
         </button>
     </div>
